--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
-version: '3'
+version: '3.8'
 
 services:
   database:    
-    build: ./    
-    environment:
-      - POSTGRES_USER=worldoffice
-      - POSTGRES_PASSWORD=experis_password140121
-      - POSTGRES_DB=experis
+    build: ./database/    
     ports:
       - "5432:5432"
