--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: experis-product
   jpa:
-    databasePlatform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate.ddl-auto: none
+    hibernate:
+      ddl-auto: none
     open-in-view: false
     show-sql: true
     properties:
@@ -11,11 +11,13 @@ spring:
         hibernate:
           envers:
             default_schema: audit
+    database-platform: org.hibernate.dialect.H2Dialect
+    database: h2
   datasource:
-    platform: postgres
-    url: jdbc:postgresql://localhost:5432/experis
-    password: experis_password140121
-    username: worldoffice
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:experis;MODE=PostgreSQL;INIT=RUNSCRIPT FROM 'classpath:schema.sql';DB_CLOSE_DELAY=-1;
+    username: sa
+    password: sa
 
   main:
     banner-mode: "off"
