Product service completed implementation

--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -16,10 +16,13 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.data:spring-data-envers'
     implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
+
     runtimeOnly 'org.postgresql:postgresql'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.h2database:h2'
 }
@@ -39,6 +42,7 @@ jacocoTestReport {
         }))
     }
 
+
     reports {
         //xml.enabled true
         //xml.destination(file("${jacoco.reportsDir}/all-tests/jacocoAllTestReport.xml"))
@@ -48,6 +52,7 @@ jacocoTestReport {
 
 
 }
+
 
 test {
     useJUnitPlatform()
