--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -5,7 +5,6 @@ spring:
     hibernate:
       ddl-auto: none
     open-in-view: false
-    show-sql: true
     properties:
       org:
         hibernate:
@@ -18,10 +17,6 @@ spring:
     url: jdbc:h2:mem:experis;MODE=PostgreSQL;INIT=RUNSCRIPT FROM 'classpath:schema.sql';DB_CLOSE_DELAY=-1;
     username: sa
     password: sa
-
-  main:
-    banner-mode: "off"
-
 server:
   servlet:
     context-path: /${spring.application.name}
@@ -31,8 +26,7 @@ server:
       enabled: false
 logging:
   level:
-    ROOT: INFO
-    com.experis: DEBUG
+    ROOT: DEBUG
 springdoc:
   swagger-ui:
     path: /swagger-ui-custom.html
