--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,31 @@
 version: '3.8'
 
 services:
-  database:    
-    build: ./database/    
+  db:    
+    build: 
+        context: ./database
+        dockerfile: ./Dockerfile
+        network: host
+        args:
+          - POSTGRES_USER_ARG=${POSTGRES_USER}
+          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
+          - POSTGRES_DB_ARG=${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "5432:5432"    
+  product-service:
+    build: 
+        context: ./product-service
+        dockerfile: ./Dockerfile        
+        network: host
+        args:
+          - POSTGRES_USER_ARG=${POSTGRES_USER}
+          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
+          - POSTGRES_DB_ARG=${POSTGRES_DB}
+          - DB_URL_ARG=db
+          - DB_PORT_ARG=5432
+          - LOG_LEVEL_ROOT_ARG=INFO
+          - LOG_LEVEL_PROJECT_ARG=DEBUG
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db   
