--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
             default_schema: audit
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/experis
-    password: experis_password140121
-    username: worldoffice
+    url: jdbc:postgresql://${DB_URL:localhost}:${DB_PORT:5432}/${DB_NAME:experis}
+    password: ${DB_PASSWORD:experis_password140121}
+    username: ${DB_USERNAME:worldoffice}
 
   main:
     banner-mode: "off"
@@ -29,8 +29,8 @@ server:
       enabled: false
 logging:
   level:
-    ROOT: INFO
-    com.experis: DEBUG
+    ROOT: ${LOG_LEVEL_ROOT:INFO}
+    com.experis: ${LOG_LEVEL_PROJECT:INFO}
 springdoc:
   swagger-ui:
     path: /swagger-ui-custom.html
