--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3.8'
 
-services:
-  db:    
-    build: 
-        context: ./database
-        dockerfile: ./Dockerfile
-        network: host
-        args:
-          - POSTGRES_USER_ARG=${POSTGRES_USER}
-          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
-          - POSTGRES_DB_ARG=${POSTGRES_DB}
-    ports:
-      - "5432:5432"    
+services:      
   product-service:
     build: 
         context: ./product-service
@@ -25,43 +14,46 @@ services:
           - DB_PORT_ARG=5432
           - LOG_LEVEL_ROOT_ARG=INFO
           - LOG_LEVEL_PROJECT_ARG=DEBUG
+          - SONAR_URL_ARG=${SONAR_URL}
     ports:
-      - "8080:8080"
-    depends_on:
-      - db   
-  shopping-cart-service:
-    build: 
-        context: ./shopping-cart
-        dockerfile: ./Dockerfile        
-        network: host
-        args:
-          - POSTGRES_USER_ARG=${POSTGRES_USER}
-          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
-          - POSTGRES_DB_ARG=${POSTGRES_DB}
-          - DB_URL_ARG=db
-          - DB_PORT_ARG=5432
-          - LOG_LEVEL_ROOT_ARG=INFO
-          - LOG_LEVEL_PROJECT_ARG=DEBUG
-    ports:
-      - "8081:8081"
-    depends_on:
-      - db   
-  batch-service:
-    build: 
-        context: ./batch-service
-        dockerfile: ./Dockerfile        
-        network: host
-        args:
-          - POSTGRES_USER_ARG=${POSTGRES_USER}
-          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
-          - POSTGRES_DB_ARG=${POSTGRES_DB}
-          - DB_URL_ARG=db
-          - DB_PORT_ARG=5432
-          - LOG_LEVEL_ROOT_ARG=INFO
-          - LOG_LEVEL_PROJECT_ARG=DEBUG   
-    depends_on:
-      - db   
-    volumes:      
-      - type: bind
-        source: /tmp
-        target: /tmp/experis
+      - "8080:8080"    
+networks: 
+  default:
+      external:
+        name: techbox_network
+#  shopping-cart-service:
+#    build: 
+#        context: ./shopping-cart
+#        dockerfile: ./Dockerfile        
+#        network: host
+#        args:
+#          - POSTGRES_USER_ARG=${POSTGRES_USER}
+#          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
+#          - POSTGRES_DB_ARG=${POSTGRES_DB}
+#          - DB_URL_ARG=db
+#          - DB_PORT_ARG=5432
+#          - LOG_LEVEL_ROOT_ARG=INFO
+#          - LOG_LEVEL_PROJECT_ARG=DEBUG
+#    ports:
+#      - "8081:8081"
+#    depends_on:
+#      - db   
+#  batch-service:
+#    build: 
+#        context: ./batch-service
+#        dockerfile: ./Dockerfile        
+#        network: host
+#        args:
+#          - POSTGRES_USER_ARG=${POSTGRES_USER}
+#          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
+#          - POSTGRES_DB_ARG=${POSTGRES_DB}
+#          - DB_URL_ARG=db
+#          - DB_PORT_ARG=5432
+#          - LOG_LEVEL_ROOT_ARG=INFO
+#          - LOG_LEVEL_PROJECT_ARG=DEBUG   
+#    depends_on:
+#      - db   
+#    volumes:      
+#      - type: bind
+#        source: /tmp
+#        target: /tmp/experis
