--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM experis/test
+FROM techbox/openjdk11
 
 ARG POSTGRES_USER_ARG
 ARG POSTGRES_PASSWORD_ARG
@@ -7,6 +7,7 @@ ARG DB_URL_ARG
 ARG DB_PORT_ARG
 ARG LOG_LEVEL_ROOT_ARG
 ARG LOG_LEVEL_PROJECT_ARG
+ARG SONAR_URL_ARG
 RUN mkdir -p /deployments
 
 EXPOSE 8080 8080
@@ -18,12 +19,13 @@ ENV DB_URL=${DB_URL_ARG}
 ENV DB_PORT=${DB_PORT_ARG}
 ENV LOG_LEVEL_ROOT=${LOG_LEVEL_ROOT_ARG}
 ENV LOG_LEVEL_PROJECT=${LOG_LEVEL_PROJECT_ARG}
+ENV SONAR_URL=${SONAR_URL_ARG}
 
-COPY ./build/libs/*.jar /deployments/experis/project.jar
-COPY ./start.sh /deployments/experis/start.sh
+COPY ./build/libs/*.jar /deployments/techbox/project.jar
+COPY ./start.sh /deployments/techbox/start.sh
 
-RUN chmod 755 /deployments/experis/start.sh
-RUN dos2unix /deployments/experis/start.sh
+RUN chmod 755 /deployments/techbox/start.sh
+RUN dos2unix /deployments/techbox/start.sh
 
 
-CMD ["sh" ,"/deployments/experis/start.sh"] 
+CMD ["sh" ,"/deployments/techbox/start.sh"] 
