--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: experis-product
+    name: techbox-product
   jpa:
     hibernate:
       ddl-auto: none
@@ -14,7 +14,7 @@ spring:
     database: h2
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:experis;MODE=PostgreSQL;INIT=RUNSCRIPT FROM 'classpath:schema.sql';DB_CLOSE_DELAY=-1;
+    url: jdbc:h2:mem:techbox;MODE=PostgreSQL;INIT=RUNSCRIPT FROM 'classpath:schema.sql';DB_CLOSE_DELAY=-1;
     username: sa
     password: sa
 server:
