fixes for swagger

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:      
   product-service:
+    container_name: product-service
     build: 
         context: ./product-service
         dockerfile: ./Dockerfile        
