--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -40,7 +40,7 @@ api:
     contact:
       url: https://www.linkedin.com/in/cesar-burgos-rodriguez-b1165293/
       name: Cesar Burgos Rodriguez
-      email: cbr9303@gmail.com
+      email: cburgosro@outlook.com
     license:
       name:
       url:
