--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ POSTGRES_USER=techbox
 POSTGRES_PASSWORD=TechBox_PW020821*
 POSTGRES_DB=techbox
 
-SONAR_JDBC_URL=jdbc:postgresql://127.0.0.1:5432/sonarqube
+SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
 SONAR_USER=sonarqube
 SONAR_PASSWORD=Sonarqube123*
 SONAR_URL=http://sonar:8999/
