Feature/enhancement issue 2 upgrade versions (#3)
* Version Upgrade

Gradle from 6.7.1 > 6.8.3
Spring-Boot 2.4.2 > 2.4.4
Springdoc-openapi 1.5.2 > 1.5.6

* Partial updates

* fixes for swagger

* partial updates

Co-authored-by: Cesar Burgos Rodriguez <cesar-burgosr@unilibre.edu.co>

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-POSTGRES_USER=worldoffice
-POSTGRES_PASSWORD=experis_password140121
-POSTGRES_DB=experis
+POSTGRES_USER=techbox
+POSTGRES_PASSWORD=TechBox_PW020821*
+POSTGRES_DB=techbox
 
+SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
+SONAR_USER=sonarqube
+SONAR_PASSWORD=Sonarqube123*
+SONAR_URL=http://sonar:8999/
