--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
-
-services:
-  db:    
+services: 
+  db:  
+    container_name: Database  
+    restart: always
     build: 
         context: ./database
         dockerfile: ./Dockerfile
@@ -11,8 +12,9 @@ services:
           - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
           - POSTGRES_DB_ARG=${POSTGRES_DB}
     ports:
-      - "5432:5432"    
+      - "5432:5432"      
   product-service:
+    container_name: product-service
     build: 
         context: ./product-service
         dockerfile: ./Dockerfile        
@@ -25,43 +27,48 @@ services:
           - DB_PORT_ARG=5432
           - LOG_LEVEL_ROOT_ARG=INFO
           - LOG_LEVEL_PROJECT_ARG=DEBUG
+          - SONAR_URL_ARG=${SONAR_URL}
     ports:
-      - "8080:8080"
+      - "8080:8080" 
     depends_on:
       - db   
-  shopping-cart-service:
-    build: 
-        context: ./shopping-cart
-        dockerfile: ./Dockerfile        
-        network: host
-        args:
-          - POSTGRES_USER_ARG=${POSTGRES_USER}
-          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
-          - POSTGRES_DB_ARG=${POSTGRES_DB}
-          - DB_URL_ARG=db
-          - DB_PORT_ARG=5432
-          - LOG_LEVEL_ROOT_ARG=INFO
-          - LOG_LEVEL_PROJECT_ARG=DEBUG
-    ports:
-      - "8081:8081"
-    depends_on:
-      - db   
-  batch-service:
-    build: 
-        context: ./batch-service
-        dockerfile: ./Dockerfile        
-        network: host
-        args:
-          - POSTGRES_USER_ARG=${POSTGRES_USER}
-          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
-          - POSTGRES_DB_ARG=${POSTGRES_DB}
-          - DB_URL_ARG=db
-          - DB_PORT_ARG=5432
-          - LOG_LEVEL_ROOT_ARG=INFO
-          - LOG_LEVEL_PROJECT_ARG=DEBUG   
-    depends_on:
-      - db   
-    volumes:      
-      - type: bind
-        source: /tmp
-        target: /tmp/experis
+networks: 
+  default:
+      external:
+        name: techbox_network
+#  shopping-cart-service:
+#    build: 
+#        context: ./shopping-cart
+#        dockerfile: ./Dockerfile        
+#        network: host
+#        args:
+#          - POSTGRES_USER_ARG=${POSTGRES_USER}
+#          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
+#          - POSTGRES_DB_ARG=${POSTGRES_DB}
+#          - DB_URL_ARG=db
+#          - DB_PORT_ARG=5432
+#          - LOG_LEVEL_ROOT_ARG=INFO
+#          - LOG_LEVEL_PROJECT_ARG=DEBUG
+#    ports:
+#      - "8081:8081"
+#    depends_on:
+#      - db   
+#  batch-service:
+#    build: 
+#        context: ./batch-service
+#        dockerfile: ./Dockerfile        
+#        network: host
+#        args:
+#          - POSTGRES_USER_ARG=${POSTGRES_USER}
+#          - POSTGRES_PASSWORD_ARG=${POSTGRES_PASSWORD}
+#          - POSTGRES_DB_ARG=${POSTGRES_DB}
+#          - DB_URL_ARG=db
+#          - DB_PORT_ARG=5432
+#          - LOG_LEVEL_ROOT_ARG=INFO
+#          - LOG_LEVEL_PROJECT_ARG=DEBUG   
+#    depends_on:
+#      - db   
+#    volumes:      
+#      - type: bind
+#        source: /tmp
+#        target: /tmp/experis
